add ThePhilosophersUsingLockWithCondition